Change buttons to links in index.html

--- a/index.html
+++ b/index.html
@@ -83,19 +83,19 @@
     </header>
 
     <!-- Heading -->
-    <div class="heading home-heading">
-      <h1>Welcome to Know It</h1>
+    <div class="heading">
+      <h1 class="home-heading">Welcome to Know It</h1>
       <p>"Learning is cool and Knowledge is great!"</p>
     </div>
 
     <!-- main section -->
-    <section class="home-section"> <!-- Class Not used at the moment-->
+    <section class="home-section">
       <div class="statement">
         <h3>Here learning is FUN !</h3>
       </div>
-      <button class="buttons home-buttons about-button">About</button>
-      <button class="buttons home-buttons study-button">Study</button>
-      <button class="buttons home-buttons play-button">Play</button>
+      <a href="about.html" class="buttons about-button">About</a>
+      <a href="study.html" class="buttons study-button">Study</a>
+      <a href="study.html" class="buttons play-button">Play</a>
     </section>
 
     <!-- Footer -->
