Change the directory organisation for the logo and icons and Fixe the corresponding path in the *html files.

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
       <a href="index.html">
         <img
           class="logo"
-          src="assets/images/logos/logo.png"
+          src="assets/images/logo/logo.png"
           alt="Know It logo representing a smiling friendly brain with eyes."
           height="40"
           width="40"
@@ -63,7 +63,7 @@
       <button class="menu-icon">
         <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
         <img
-          src="assets/images/logos/menu-64.png"
+          src="assets/images/icons/menu.png"
           alt="Icon of a book."
           height="40"
           width="40"
@@ -95,7 +95,7 @@
 
     <!-- Heading -->
     <div class="heading">
-      <h2 class="about-heading">About</h2>
+      <h2>About</h2>
     </div>
 
     <!-- main section -->
