--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <header>
       <!-- Logo -->
       <a href="index.html">
-        <img class="logo" src="assets/images/logos/logo.png" alt="Know It logo representing a smiling friendly brain with eyes."
+        <img class="logo" src="assets/images/logo/logo.png" alt="Know It logo representing a smiling friendly brain with eyes."
           height="40"
           width="40"
         />
@@ -56,7 +56,7 @@
       <!--Dropdown navigation menu for all devices -->
       <button class="menu-icon">
         <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
-        <img src="assets/images/logos/menu-64.png" alt="Icon of a book." height="40" width="40" />
+        <img src="assets/images/icons/menu.png" alt="Icon of a book." height="40" width="40" />
         <span class="menu-text">Menu</span>
       </button>
 
