Add accessibility attributes to *.html and add focus element to the corresponding buttons and links for a better UX.

--- a/about.html
+++ b/about.html
@@ -49,22 +49,23 @@
     <!-- Navigation bar -->
     <header>
       <!-- Logo -->
-      <a href="index.html">
+      <a href="index.html" class="logo" aria-label="Link to the home page.">
         <img
-          class="logo"
           src="assets/images/logo/logo.png"
           alt="Know It logo representing a smiling friendly brain with eyes."
+          title="Link to the home page."
           height="40"
           width="40"
         />
       </a>
 
       <!--Dropdown navigation menu for all devices -->
-      <button class="menu-icon">
+      <button class="menu-icon" aria-label="Navigation menu.">
         <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
         <img
           src="assets/images/icons/menu.png"
           alt="Icon of a book."
+          title="Navigation menu."
           height="40"
           width="40"
         />
@@ -118,33 +119,33 @@
         years old students. It treats exciting subjects that appeal to everyone.
       </p>
 
-      <p>Why don't you give it a try?</p> 
+      <p>Why don't you give it a try?</p>
       <a href="study.html" class="buttons about-buttons study-button">Study</a>
       <a href="play.html" class="buttons about-buttons play-button">Play</a>
 
       <p>
         If you are looking for some content tailored to specific needs, don't
-        hesitate to contact us.<br> 
-        We can provide what you need! <a href="contact.html" class="contact-button">Contact</a>
+        hesitate to contact us.<br />
+        We can provide what you need!
+        <a href="contact.html" class="contact-button">Contact</a>
       </p>
-      
     </section>
 
     <!-- Footer -->
     <footer class="footer">
       <div class="copyright">
-        <i class="far fa-copyright"></i>
+        <i class="far fa-copyright" aria-hidden="true"></i>
         For educational purposes.
       </div>
       <div class="footer-links">
-        <a href="#">
-          <i class="fab fa-pinterest-p"></i>
+        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
+          <i class="fab fa-pinterest-p" aria-hidden="true" title="Link to websiteName."></i>
         </a>
-        <a href="#">
-          <i class="fas fa-graduation-cap"></i>
+        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
+          <i class="fas fa-graduation-cap" aria-hidden="true" title="Link to websiteName."></i>
         </a>
-        <a href="#">
-          <i class="fas fa-cogs"></i>
+        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
+          <i class="fas fa-cogs" aria-hidden="true" title="Link to websiteName."></i>
         </a>
       </div>
     </footer>
