--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     />
     <meta name="author" content="Know It" />
 
-    <script src="https://kit.fontawesome.com/a5ee39e432.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/a5ee39e432.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- Favicon implementation from favicon.io(https://favicon.io/favicon-converter/) -->
     <link
@@ -46,17 +49,26 @@
     <!-- Navigation bar -->
     <header>
       <!-- Logo -->
-      <a href="index.html">
-        <img class="logo" src="assets/images/logo/logo.png" alt="Know It logo representing a smiling friendly brain with eyes."
+      <a href="index.html" class="logo" aria-label="Link to the home page.">
+        <img
+          src="assets/images/logo/logo.png"
+          alt="Know It logo representing a smiling friendly brain with eyes."
+          title="Link to the home page."
           height="40"
           width="40"
         />
       </a>
 
       <!--Dropdown navigation menu for all devices -->
-      <button class="menu-icon">
+      <button class="menu-icon" aria-label="Navigation menu.">
         <!-- Icon image from iconfinder.com(https://www.iconfinder.com/search/?q=book&price=free) -->
-        <img src="assets/images/icons/menu.png" alt="Icon of a book." height="40" width="40" />
+        <img
+          src="assets/images/icons/menu.png"
+          alt="Icon of a book."
+          title="Navigation menu."
+          height="40"
+          width="40"
+        />
         <span class="menu-text">Menu</span>
       </button>
 
@@ -100,21 +112,21 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="copyright">
-          <i class="far fa-copyright"></i>
-            For educational purposes.
-        </div>
-        <div class="footer-links">
-            <a href="#">
-                <i class="fab fa-pinterest-p"></i>
-            </a>
-            <a href="#">
-                <i class="fas fa-graduation-cap"></i>
-            </a>
-            <a href="#">
-                <i class="fas fa-cogs"></i>
-            </a>
-        </div>
+      <div class="copyright">
+        <i class="far fa-copyright" aria-hidden="true"></i>
+        For educational purposes.
+      </div>
+      <div class="footer-links">
+        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
+          <i class="fab fa-pinterest-p" aria-hidden="true" title="Link to websiteName."></i>
+        </a>
+        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
+          <i class="fas fa-graduation-cap" aria-hidden="true" title="Link to websiteName."></i>
+        </a>
+        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
+          <i class="fas fa-cogs" aria-hidden="true" title="Link to websiteName."></i>
+        </a>
+      </div>
     </footer>
   </body>
 </html>
