Add the volcano content to the study.html page as well as the corresponding images in the subjects-images directory and Style the page in style.css

--- a/study.html
+++ b/study.html
@@ -156,15 +156,19 @@
           />
         </button>
       </div>
+
       <section class="subject-content-wrapper">
+        <!-- Volcano article -->
         <article class="subject-content volcano show">
+          <!--volcano class not use at the moment-->
           <h4 class="heading subject-heading">Volcano</h4>
+          <!--subject-heading class not use at the moment-->
 
           <h5>Definition:</h5>
           <p>
-            Volcanoes have different shapes and forms. They look like mountains
-            from which molten rocks and gaz can erupt. In simple words, it is an
-            opening through the Earth crust.
+            Volcanoes have different shapes and forms. Some look like mountains
+            (<em>cone like shape</em>) from which molten rocks and gaz can
+            erupt. In simple words, it is an opening through the Earth crust.
             <br />
             When a volcano in not in eruption, everything is happening inside
             it. But what is going on in there?
@@ -172,19 +176,330 @@
           <button class="magnifier">
             <i class="fas fa-search-plus"></i>
           </button>
-          <p class="hide">EXTRA CONTENT HERE</p>
+          <div class="hide">
+            <p>
+              Volcanoes are formed when hot liquid, molten rocks and gaz, known
+              as magma is forced to the surface of the earth by natural forces
+              such as temperature and pressure. During this process the land
+              around the column of magma rises to form the shape of the
+              volcano<br />
+              Most of the volcanoes are situated where two tectonic plates
+              collide. But they can appear other places too.
+            </p>
+          </div>
 
           <h5>How Does It Work?</h5>
-          <p></p>
+
+          <h6>1- The Layers</h6>
+          <div class="images-container">
+            <!-- Image by vectortatu from Adobe Stock: 
+            (https://stock.adobe.com/ie/images/earth-structure-with-lithosphere-and-continental-crust-earth-mantle-and-earth-core-vector-illustration/117134742?prev_url=detail) -->
+            <img
+              src="assets/images/subjects-images/earth-structure.jpeg"
+              alt="Illustration of the different layers of the planet Earth."
+              height="400"
+              width="400"
+            />
+          </div>
+          <p>
+            Our loved planet Earth is not solid everywhere! And volcanoes are
+            proof of it. As you can see on the illustration, we live on a the
+            outer part of the planet called the <strong>crust</strong>. It is
+            about 35 kilometers thick and the thinnest layer. Deeper within the
+            Earth and surrounding the planet's core is a liquid layer called the
+            <strong>outer core</strong>. The <strong>mantle</strong> sometimes
+            produces the <strong>magma</strong> that flows out of the volcanoes
+            as <strong>lava</strong>.
+          </p>
+
+          <h6>2- The Movements</h6>
+          <div class="images-container">
+            <!-- Image by gritsalak from Adobe Stock: 
+              (https://stock.adobe.com/ie/images/volcano-and-earthquake-infographic-vector/211375558?prev_url=detail) -->
+            <img
+              src="assets/images/subjects-images/volcano-schema.jpeg"
+              alt="Illustration of a volcano with tectonic plates."
+              height="300"
+              width="399"
+            />
+          </div>
+
+          <p>
+            The crust is not one solid piece. In fact if it were, we might not
+            have any volcanoes! Indeed the crust (<em
+              >composed of the oceanic crust and continental crust</em
+            >) moves with the tectonic plates.<br />
+            The tectonic plates form the lithosphere. They are huge section of
+            rocks that are constantly moving. Where those plates meet the
+            friction creates a lot of energy with very hight temperature and
+            pressure. Cracks form and the magma can emerged from a
+            <strong>magma chamber</strong> producing a volcano.<br />
+            Although volcanoes are mostly found at the contact of two tectonic
+            plates, they are also found away from those plates boundaries in
+            <strong>hotspots</strong> zones. Hotspots are formed when very hot
+            magma makes its way through the crust. They happen when magma is
+            especially hot and the conditions are extreme.
+          </p>
+
+          <button class="magnifier">
+            <i class="fas fa-search-plus"></i>
+          </button>
+          <div class="hide">
+            <p>
+              You can think of the tectonic plates as giant pieces of puzzle
+              that cover the Earth. They never stop moving but it is so slow we
+              can't feel it. They progress at the rate of a couple of
+              centimeters (<em>between 3 and 5cms</em>) a year!
+            </p>
+            <ul>
+              <span>
+                The movement of the plates creates three types of tectonic
+                boundaries:
+              </span>
+              <li>
+                <strong>Convergent</strong>, when plates move toward one another
+                (also known as subduction). They can form mountain ranges like
+                the Himalaya and the mount Everest (that keep growing over
+                time), or trenches like the Mariana Trench in the North Pacific
+                Ocean (deepest point on Earth)
+              </li>
+              <li>
+                <strong>Divergent</strong>, when plates move away from one
+                another. In the ocean this process widen the oceanic floor and
+                create a ridge.
+              </li>
+              <li>
+                <strong>Transform</strong>, when plates move alongside one
+                another. They grind each other and create devastating
+                earthquake.
+              </li>
+            </ul>
+          </div>
+
+          <h5>The Different types of volcanoes:</h5>
+          <div class="images-container">
+            <!-- Image by designua from Adobe Stock: 
+            (https://stock.adobe.com/ie/images/volcano-type-shield-dome-composite-and-caldera/319892493?prev_url=detail) -->
+            <img
+              src="assets/images/subjects-images/volcano-types.jpeg"
+              alt="Volcano types."
+              height="400"
+              width="558"
+            />
+          </div>
+
+          <p>
+            Volcanoes appear in different sizes and variety. We can find four
+            basic types that are characterized by the lava flow.<br />
+            The lava composition ranges from very liquid to very viscous and
+            influences directly the lava flow.<br />
+          </p>
+          <ul>
+            <span> The volcano types: </span>
+            <li>
+              <strong>Shield volcano</strong> are the result of liquid lava
+              emitted from a central vent. The low viscosity lava flows rapidly
+              over long distance forming the shield like shape volcano. Their
+              gentle slopes usually don't exceed 10 degrees.
+            </li>
+            <li>
+              <strong>Composite volcano</strong> also known as
+              <strong>Stratovolcanoes</strong> are the result of more viscous
+              lava emitted from a main central vent and secondary side vents.
+              The medium to hight viscosity lava flows slowly forming steeper
+              slopes. Over time the hight density lava hardening rapidly builds
+              up rising the hight of the volcano. They can explode with a great
+              violence from the main vent as well as the side vents.
+            </li>
+            <li>
+              <strong>Dome volcano</strong> are the result of very viscous lava
+              emitted from a central vent. The hight viscosity lava flows very
+              slowly cooling and hardening when it reaches the surface. This
+              phenomena create a dome like shape around and over the vent
+              blocking the eruption. Sometimes when the pressure gets hight
+              enough it produces violent eruption blowing the dome into pieces.
+            </li>
+            <li>
+              <strong>Caldera volcano</strong> are the result of viscous lava
+              emitted from different vent that form over time. They form after a
+              volcanic eruption empties a deep magma chamber causing the surface
+              to collapse. This creates a crater like shape called caldera. They
+              can be up to 50 kilometers wide. Over time the magma chamber can
+              fill with magma again rising the caldera floor. It may stay like
+              this or create another eruption reshaping the caldera and know as
+              a <strong>resurgent caldera</strong>.
+            </li>
+          </ul>
+
+          <h5>The Parts of a Volcano:</h5>
+          <div class="images-container">
+            <!-- Image by blueringmedia from Adobe Stock: 
+              (https://stock.adobe.com/ie/images/part-of-a-volcano/377249194?prev_url=detail) -->
+            <img
+              src="assets/images/subjects-images/volcano-parts.jpeg"
+              alt="Illustration of the different parts of a volcano."
+              height="400"
+              width="596"
+            />
+          </div>
+          <ul>
+            <span> Volcanoes are composed of: </span>
+            <li>Magma chamber</li>
+            <li>Magma</li>
+            <li>Main conduit, pipe or column</li>
+            <li>Main vent</li>
+            <li>Side or secondary vents</li>
+            <li>Crater</li>
+            <li>Lava</li>
+            <li>Ash cloud or plume</li>
+            <li>Layers of emitted lava and ash</li>
+          </ul>
+
+          <h5>Different Types of Eruptions:</h5>
+          <ul>
+            <span> Volcanic eruptions can be of two types: </span>
+            <li>
+              <strong>Explosive eruption</strong> is characterized by violent
+              emissions of gaz, ashes and rocks in the atmosphere (<em
+                >known as volcanic bomb</em
+              >).
+            </li>
+            <li>
+              <strong>Effusive eruption</strong> is characterized by outpouring
+              of lava, relatively low in viscosity and gaz, without significant
+              explosion.
+            </li>
+          </ul>
+
+          <button class="magnifier">
+            <i class="fas fa-search-plus"></i>
+          </button>
+          <div class="hide">
+            <p>
+              In more detailed classification volcanic eruptions are are of six
+              types of increasing degree of explosiveness:<br />
+              They are characterized by their volcanic activity types and
+              location that are very often linked.
+              <strong>Icelandic</strong> is an effusive type with very liquid
+              lava outpouring from long parallel fissures often building lava
+              plateaus.<br />
+              <strong>Hawaiian</strong> is similar to the Icelandic type except
+              that the lava is flowing from the summit of a volcano creating
+              shield volcanoes.<br />
+              <strong>Strombolian</strong> is an effusive type with few outburst
+              of ga creating relatively small explosions.<br />
+              <strong>Vulcanian</strong> type involves moderate explosions
+              creating plume cloud.<br />
+              <strong>Pelean</strong> is an explosive type with low viscosity
+              lava, pyroclastic flows and very violent explosions and
+              destructive eruptions.<br />
+              <strong>Plinian</strong> is the most intense and destructive of
+              all. With a highly gas rich magma it creates enormous explosion
+              and ejects a huge quantity of gas and volcanic fragments into the
+              sky forming a devastating eruption cloud. It can be produced for
+              several hours and rise up to the stratosphere (<em
+                >about 10 kilometers hight</em
+              >).
+            </p>
+          </div>
 
           <h5>Interesting Facts:</h5>
-          <p></p>
+          <ul>
+            <li>
+              About 90% of all active volcanoes are located in the Pacific Ring
+              of Fire(<em
+                >where the Pacific plate meets other surrounding tectonic
+                plates</em
+              >).
+            </li>
+            <li>
+              More than 80% 2 of the external part of the Earth crust is made of
+              basaltic rocks formation resulting of lava eruptions.
+            </li>
+            <li>
+              Lava creates glass called obsidian. It is a very strong rock with
+              edges sharper than steel usually black and used for weaponry by
+              our ancestors.
+            </li>
+            <li>
+              The hottest lava made of basalt can reach temperatures as hight as
+              1170 celsius degree. It is hot enough to melt any kind of metal
+              and rocks.
+            </li>
+            <li>
+              The cloud produced by a volcano is not smoke but ash. Ash created
+              by volcanoes is made of immensely hot gas, lava and rocks
+              shattered into tiny pieces as small as two millimeters and
+              extremely dangerous.
+            </li>
+            <li>
+              Volcanic ash is very dangerous for airplanes causing engines
+              problems.
+            </li>
+            <li>
+              Volcanic lightning can appear during an eruption. It is caused by
+              the friction of the small fragments present in the volcanic ash
+              cloud generating static electricity.
+            </li>
+            <li>
+              The asthenosphere act as a giant moving belt induced by convection
+              movement of temperatures and magma making the tectonic plates
+              move.
+            </li>
+            <li>
+              Hotspots can create what is called a volcanic chain. The magma
+              erupting creates a volcano and while the tectonic plates are
+              moving, new volcanoes are created. This repeating process creates
+              the volcanic chain.
+            </li>
+            <li>
+              The mid-ocean ridge is the longest mountain range on Earth. It is
+              mostly under water and created by periodic eruptions.
+            </li>
+            <li>
+              Volcanic eruption can create lahars devastating everything on its
+              way.
+            </li>
+          </ul>
+
+          <h5>Scientific Terms:</h5>
+
+          <ul class="scientific-terms">
+            <li>
+              <strong>Active volcano</strong>: A volcano that has erupted at
+              least once in the pas 10,000 years and is expected to erupt again.
+              It can be erupting or dormant.
+            </li>
+            <li>
+              <strong>Magma</strong>: Mixed of gas and molten rocks below the
+              Earth's surface.
+            </li>
+            <li>
+              <strong>Lava</strong>: Magma that reaches the Earth's surface.
+            </li>
+            <li>
+              <strong>Pyroclastic flow</strong>: A turbulent and very fast
+              moving very hot mixture of gas and ash erupted from a volcano. It
+              can reach a speed that often exceed 80 kilometers per hour with a
+              temperature that ranges between 200 and 700 celsius degrees. It is
+              extremely devastating.
+            </li>
+            <li>
+              <strong>Lahar</strong>: A fast moving mudflow made of volcanic ash
+              and water. It can consume and incorporate anything in its way and
+              grow more than 10 times its initial size. In steep areas it can
+              exceed 200 kilometers per hour.
+            </li>
+          </ul>
         </article>
 
+        <!-- Jungle content -->
         <article class="hide">Content display in here</article>
 
+        <!-- Ocean content -->
         <article class="hide">Content display in here</article>
 
+        <!-- Earth content -->
         <article class="hide">Content display in here</article>
       </section>
     </section>
