Fix the centering of the subtitle by changing from a paragraph to a span in index.html and targeted it in style.css for corresponding styling.

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- Heading -->
     <div class="heading">
       <h1 class="home-heading">Welcome to Know It</h1>
-      <p>"Learning is cool and Knowledge is great!"</p>
+      <span>"Learning is cool and Knowledge is great!"</span>
     </div>
 
     <!-- main section -->
