Add the features and styles to the html files and formatted the css code for better practice and readability.

--- a/404.html
+++ b/404.html
@@ -100,21 +100,32 @@
       <span>This is a 404 error page.</span>
     </div>
 
-    <!-- Form section -->
-    <section class="form-section">
-      <p>
-        We can seem to be able to find the page you are looking for.
-      </p>
-      <a href="index.html" class="buttons">Back to home page</a>
+    <!-- 404 section -->
+    <section class="error-section">
+      <p>We can seem to be able to find the page you are looking for.</p>
+      <a href="index.html" class="back-home-button">Back to home page</a>
 
       <ul>
-        Here are some useful links:
+        <span>Here are some useful links:</span>
         <li>
-          <a href="" target="_blank" rel="noopener" aria-label="Link to WEBSITENAME">What is a 404 error?</a>
-          <a href="contact.html" aria-label="Link to the contact page.">Report an issue.</a>
+          <a
+            href="https://en.wikipedia.org/wiki/HTTP_404"
+            class="error-links"
+            target="_blank"
+            rel="noopener"
+            aria-label="Link to Wikipedia."
+            >What is a 404 error?</a
+          >
+        </li>
+        <li>
+          <a
+            href="contact.html"
+            class="error-links"
+            aria-label="Link to the contact page."
+            >Report an issue.</a
+          >
         </li>
       </ul>
-
     </section>
 
     <!-- Footer -->
@@ -124,14 +135,41 @@
         For educational purposes.
       </div>
       <div class="footer-links">
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fab fa-pinterest-p" aria-hidden="true" title="Link to websiteName."></i>
+        <a
+          href="#"
+          rel="noopener"
+          target="_blank"
+          aria-label="Link to websiteName."
+        >
+          <i
+            class="fab fa-pinterest-p"
+            aria-hidden="true"
+            title="Link to websiteName."
+          ></i>
         </a>
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fas fa-graduation-cap" aria-hidden="true" title="Link to websiteName."></i>
+        <a
+          href="#"
+          rel="noopener"
+          target="_blank"
+          aria-label="Link to websiteName."
+        >
+          <i
+            class="fas fa-graduation-cap"
+            aria-hidden="true"
+            title="Link to websiteName."
+          ></i>
         </a>
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fas fa-cogs" aria-hidden="true" title="Link to websiteName."></i>
+        <a
+          href="#"
+          rel="noopener"
+          target="_blank"
+          aria-label="Link to websiteName."
+        >
+          <i
+            class="fas fa-cogs"
+            aria-hidden="true"
+            title="Link to websiteName."
+          ></i>
         </a>
       </div>
     </footer>
