--- a/about.html
+++ b/about.html
@@ -120,8 +120,8 @@
       </p>
 
       <p>Why don't you give it a try?</p>
-      <a href="study.html" class="buttons about-buttons study-button">Study</a>
-      <a href="play.html" class="buttons about-buttons play-button">Play</a>
+      <a href="study.html" class="buttons small-buttons study-button">Study</a>
+      <a href="play.html" class="buttons small-buttons play-button">Play</a>
 
       <p>
         If you are looking for some content tailored to specific needs, don't
