--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       </div>
       <a href="about.html" class="buttons about-button">About</a>
       <a href="study.html" class="buttons study-button">Study</a>
-      <a href="study.html" class="buttons play-button">Play</a>
+      <a href="play.html" class="buttons play-button">Play</a>
     </section>
 
     <!-- Footer -->
