--- a/contact.html
+++ b/contact.html
@@ -102,25 +102,30 @@
     <!-- Form section -->
     <section class="form-section">
       <p>
-        To get in touch, please fill up the form, we will get back to you as soon as possible.
+        To get in touch, please fill up the form, we will get back to you as
+        soon as possible.
       </p>
 
-      <form method="post" action="#">
-        <label for="name">You are:</label>
-        <input id="name" type="text" name="name" placeholder="Full name" required>
+      <form class="contact-form" method="post" action="#">
+        <label for="name">Your name:</label>
+        <input
+          id="name"
+          type="text"
+          name="name"
+          placeholder="Full name"
+          required
+        />
         <label for="reasons">Reason:</label>
         <select id="reasons" type="text" name="reasons" required>
-          <option value="#">Select a reason</option>
-          <option value="request">Request</option>
+          <option value="request">Special request</option>
           <option value="mistake">Found a mistake</option>
           <option value="issue">Report an issue</option>
           <option value="other">Other</option>
         </select>
         <label for="message">Your message:</label>
         <textarea name="message" id="message" cols="15" rows="5"></textarea>
-        <button type="button">Send</button>
+        <button id="send-button" type="button">Send</button>
       </form>
-
     </section>
 
     <!-- Footer -->
@@ -130,14 +135,41 @@
         For educational purposes.
       </div>
       <div class="footer-links">
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fab fa-pinterest-p" aria-hidden="true" title="Link to websiteName."></i>
+        <a
+          href="#"
+          rel="noopener"
+          target="_blank"
+          aria-label="Link to websiteName."
+        >
+          <i
+            class="fab fa-pinterest-p"
+            aria-hidden="true"
+            title="Link to websiteName."
+          ></i>
         </a>
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fas fa-graduation-cap" aria-hidden="true" title="Link to websiteName."></i>
+        <a
+          href="#"
+          rel="noopener"
+          target="_blank"
+          aria-label="Link to websiteName."
+        >
+          <i
+            class="fas fa-graduation-cap"
+            aria-hidden="true"
+            title="Link to websiteName."
+          ></i>
         </a>
-        <a href="#" rel="noopener" target="_blank" aria-label="Link to websiteName.">
-          <i class="fas fa-cogs" aria-hidden="true" title="Link to websiteName."></i>
+        <a
+          href="#"
+          rel="noopener"
+          target="_blank"
+          aria-label="Link to websiteName."
+        >
+          <i
+            class="fas fa-cogs"
+            aria-hidden="true"
+            title="Link to websiteName."
+          ></i>
         </a>
       </div>
     </footer>
