--- a/play.html
+++ b/play.html
@@ -109,26 +109,98 @@
         </p>
         <p>
           If you need to refresh your memory you can go to the study room.
-          <a href="study.html" class="buttons small-buttons study-button">Study</a>
+          <a href="study.html" class="buttons small-buttons study-button"
+            >Study</a
+          >
         </p>
-        <button>How to play?</button>
+        <!-- Button to trigger the modal that display the rules -->
+        <button id="rules-button">How to play ?</button>
+        <div class="hide" id="rules-modal">
+          <strong>How to play:</strong>
+
+          <p>
+            You found yourself locked in a labyrinth. You can see the exit but
+            the only way out is to activate some mechanism in order to progress
+            through it. You will need knowledge and logic to make it out.
+          </p>
+
+          <ul>
+            <li>Use the arrows to move through the maze.</li>
+            <li>
+              To activate the mechanism, step on the case and answer the
+              question.
+            </li>
+            <li>If you get it right a passage will open :) .</li>
+            <li>If you get it wrong you will get a strike :( .</li>
+            <li>
+              When the game is over you will be send back to the start for a new
+              game.
+            </li>
+          </ul>
+
+          <p>The number of strikes before game over depend on the level.</p>
+        </div>
       </section>
 
       <!-- Game settings interface -->
       <section class="game-settings">
         <!-- Carousel to display the subjects on one line -->
-        <div class="carousel">Icons Icons Icons</div>
+        <div class="carousel">
+          <!-- Credit for the images used in the buttons: Icons made by Freepik from [www.flaticon.com](www.flaticon.com):
+        * [Volcano](https://www.flaticon.com/free-icon/volcano_2206644?term=volcano&page=1&position=3&page=1&position=3&related_id=2206644&origin=search)
+        * [Jungle](https://www.flaticon.com/free-icon/volcano_2206644?term=volcano&page=1&position=3&page=1&position=3&related_id=2206644&origin=search)
+        * [Ocean](https://www.flaticon.com/free-icon/ocean_3254422?term=ocean&page=1&position=8&page=1&position=8&related_id=3254422&origin=search)
+        * [Earth](https://www.flaticon.com/free-icon/earth-globe_616616?term=earth&page=1&position=12&page=1&position=12&related_id=616616&origin=search) -->
+          <div class="subjects-section">
+            <button class="subjects-buttons volcano-button">
+              <img
+                src="assets/images/icons/volcano.png"
+                alt="Volcano icon."
+                title="Volcano icon."
+                height="50"
+                width="50"
+              />
+            </button>
+            <button class="subjects-buttons jungle-button">
+              <img
+                src="assets/images/icons/jungle.png"
+                alt="Jungle icon."
+                title="Jungle icon."
+                height="50"
+                width="50"
+              />
+            </button>
+            <button class="subjects-buttons ocean-button">
+              <img
+                src="assets/images/icons/ocean.png"
+                alt="Ocean icon."
+                title="Ocean icon."
+                height="50"
+                width="50"
+              />
+            </button>
+            <button class="subjects-buttons earth-button">
+              <img
+                src="assets/images/icons/earth-globe.png"
+                alt="Earth icon."
+                title="Earth icon."
+                height="50"
+                width="50"
+              />
+            </button>
+          </div>
+        </div>
 
         <div class="dropdown-menu">
-          <ul>
-            Set Level
+          <button id="levels-button">Set Level <i class="fas fa-sort-down"></i></button>
+          <ul class="hide">
             <li>Apprentice</li>
             <li>Scientist</li>
             <li>Genius</li>
           </ul>
         </div>
 
-        <button>Start</button>
+        <button id="start-button">Start</button>
       </section>
     </section>
 
